--- a/CH14/CH14.vcxproj
+++ b/CH14/CH14.vcxproj
@@ -139,6 +139,24 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="14-1-연습문제1.c" />
+    <ClCompile Include="14-1-연습문제3.c" />
+    <ClCompile Include="14-1-연습문제4.c" />
+    <ClCompile Include="14-1-연습문제5.c" />
+    <ClCompile Include="14-1.c" />
+    <ClCompile Include="14-2-연습문제1.c" />
+    <ClCompile Include="14-2-연습문제2.c" />
+    <ClCompile Include="14-2-연습문제4.c" />
+    <ClCompile Include="14-2-연습문제5.c" />
+    <ClCompile Include="14-2.c" />
+    <ClCompile Include="14-3.c" />
+    <ClCompile Include="14-4.c" />
+    <ClCompile Include="14-5.c" />
+    <ClCompile Include="14-6.c" />
+    <ClCompile Include="14-7.c" />
+    <ClCompile Include="14-도전1.c" />
+    <ClCompile Include="14-도전2.c" />
+    <ClCompile Include="14-도전3.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
