--- a/CH14/CH14.vcxproj.filters
+++ b/CH14/CH14.vcxproj.filters
@@ -14,4 +14,60 @@
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="14-도전3.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="14-1.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="14-1-연습문제1.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="14-1-연습문제3.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="14-1-연습문제4.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="14-1-연습문제5.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="14-2.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="14-2-연습문제1.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="14-2-연습문제2.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="14-2-연습문제4.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="14-2-연습문제5.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="14-3.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="14-4.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="14-5.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="14-6.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="14-7.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="14-도전1.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="14-도전2.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
